--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
     "dotnet.enableXamlTools": true,
     "dotnet.preferVisualStudioCodeFileSystemWatcher": true,
     "dotnet.preview.enableSupportForSlnx": true,
+    // https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/main/images/folderIcons.png
     "material-icon-theme.folders.associations": {
         "Core": "Mojo",
         "SourceGen": "Plugin",
@@ -103,7 +104,9 @@
         "Scenarios": "Queue",
         "Dictionaries": "Stack",
     },
+    // https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/main/images/fileIcons.png
     "material-icon-theme.files.associations": {
+        "Program.cs": "Console",
         "*.Generated.cs": "Cobol", // same color as C# and "close enough", but still different
         "*.tt": "Log",
         "*.snk": "Lock",
