refactor: simplify unaligned TVector loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,29 +80,34 @@
     "dotnet.preview.enableSupportForSlnx": true,
     // https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/main/images/folderIcons.png
     "material-icon-theme.folders.associations": {
+        "Attributes": "Decorators",
+        "BenchmarkDotNet.Artifacts": "Attachment",
+        "benchmarkresults": "Benchmark",
+        "Binding": "Resolver",
+        "Comparers": "Target",
+        "Comparisons": "Constant",
+        "Converters": "Middleware",
         "Core": "Mojo",
-        "SourceGen": "Plugin",
-        "Unit": "Test",
+        "Dictionaries": "Stack",
+        "Enumeration": "CI",
+        "Escaping": "Snippet",
+        "Exceptions": "Error",
+        "Formattable": "Template",
         "Fuzz": "Queue",
         "Fuzzing": "Queue",
-        "Attributes": "Decorators",
-        "Exceptions": "Error",
-        "Properties": "Config",
+        "Internal": "Private",
         "IO": "Shader",
-        "TestData": "Database",
-        "Writing": "Custom",
-        "Reading": "Class",
+        "Properties": "Config",
         "Readers": "Class",
-        "Comparisons": "Constant",
-        "BenchmarkDotNet.Artifacts": "Attachment",
+        "Reading": "Class",
         "Reflection": "Trigger",
         "Runtime": "Config",
-        "Enumeration": "CI",
-        "Binding": "Resolver",
-        "Converters": "Middleware",
-        "Testcases": "Interface",
         "Scenarios": "Queue",
-        "Dictionaries": "Stack",
+        "SourceGen": "Plugin",
+        "Testcases": "Interface",
+        "TestData": "Database",
+        "Unescaping": "Snippet",
+        "Writing": "Custom",
     },
     // https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/main/images/fileIcons.png
     "material-icon-theme.files.associations": {
