refactor(test): move shared typemaps to a single project

--- a/test/Lib/FlameCsv.Tests.Lib.csproj
+++ b/test/Lib/FlameCsv.Tests.Lib.csproj
@@ -8,5 +8,11 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\src\Core\FlameCsv.Core.csproj" />
+        <ProjectReference
+            Include="..\..\src\SourceGen\FlameCsv.SourceGen.csproj"
+            OutputItemType="Analyzer"
+            ReferenceOutputAssembly="false"
+            PackAsAnalyzer="true"
+        />
     </ItemGroup>
 </Project>
