test: use return tracking pool in tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,6 +96,7 @@
         "Fuzz": "Queue",
         "Fuzzing": "Queue",
         "Internal": "Private",
+        "Intrinsics": "Dump",
         "IO": "Shader",
         "Properties": "Config",
         "Readers": "Class",
