--- a/test/Lib/FlameCsv.Tests.Lib.csproj
+++ b/test/Lib/FlameCsv.Tests.Lib.csproj
@@ -5,6 +5,7 @@
     <ItemGroup>
         <PackageReference Include="xunit.v3.extensibility.core" Version="2.0.2" />
         <PackageReference Include="Utf8StringInterpolation" Version="1.3.2" />
+        <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.5" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\src\Core\FlameCsv.Core.csproj" />
