--- a/src/SourceGen/FlameCsv.SourceGen.csproj
+++ b/src/SourceGen/FlameCsv.SourceGen.csproj
@@ -7,6 +7,7 @@
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
         <IncludeSymbols>false</IncludeSymbols>
         <DevelopmentDependency>true</DevelopmentDependency>
+        <!-- <DefineConstants>$(DefineConstants);WRITER_DEBUG</DefineConstants> -->
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
