--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,4 +3,10 @@
     <PropertyGroup>
         <Version>0.4.0</Version>
     </PropertyGroup>
+    <ItemGroup Condition="'$(IncludeInternalsVisibleTo)' == 'true'">
+        <PackageReference Include="Roslynator.Analyzers" Version="4.13.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
