--- a/tools/Bench/FlameCsv.Benchmark.csproj
+++ b/tools/Bench/FlameCsv.Benchmark.csproj
@@ -9,6 +9,7 @@
         <DebugSymbols>true</DebugSymbols>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)Generated</CompilerGeneratedFilesOutputPath>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <PropertyGroup>
         <InvariantGlobalization>true</InvariantGlobalization>
