--- a/test/SourceGen/FlameCsv.Tests.SourceGen.csproj
+++ b/test/SourceGen/FlameCsv.Tests.SourceGen.csproj
@@ -1,7 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.13.0" />
-        <PackageReference Include="Basic.Reference.Assemblies.Net90" Version="1.8.0" />
+        <PackageReference
+            Condition=" '$(TargetFramework)' == 'net9.0' "
+            Include="Basic.Reference.Assemblies.Net90"
+            Version="1.8.3"
+        />
+        <PackageReference
+            Condition=" '$(TargetFramework)' == 'net10.0' "
+            Include="Basic.Reference.Assemblies.Net100"
+            Version="1.8.3"
+        />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\src\Core\FlameCsv.Core.csproj" />
