--- a/src/Core/FlameCsv.Core.csproj
+++ b/src/Core/FlameCsv.Core.csproj
@@ -11,16 +11,25 @@
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
         <PackageReference
             Include="JetBrains.Annotations"
-            Version="2024.3.0"
+            Version="2025.2.2"
             PrivateAssets="all"
             ReferenceOutputAssembly="false"
         />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    </ItemGroup>
+    <!-- FastExpressionCompiler; include source only when releasing nuget -->
+    <ItemGroup>
         <PackageReference
+            Condition="'$(IncludeInternalsVisibleTo)' != 'true'"
             Include="FastExpressionCompiler.LightExpression.Internal.src"
-            Version="5.1.1"
+            Version="5.3.0"
             PrivateAssets="All"
         />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+        <PackageReference
+            Condition="'$(IncludeInternalsVisibleTo)' == 'true'"
+            Include="FastExpressionCompiler.LightExpression"
+            Version="5.3.0"
+        />
     </ItemGroup>
     <!-- Nuget -->
     <PropertyGroup>
