--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,7 @@
         "TestData": "Database",
         "Unescaping": "Snippet",
         "Writing": "Custom",
+        "ParallelUtils": "Pipe",
     },
     // https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/main/images/fileIcons.png
     "material-icon-theme.files.associations": {
