refactor: new api usage
fix problems with old parallel impl

--- a/test/Writing/FlameCsv.Tests.Writing.csproj
+++ b/test/Writing/FlameCsv.Tests.Writing.csproj
@@ -10,6 +10,9 @@
         <ProjectReference Include="..\Lib\FlameCsv.Tests.Lib.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="CsvHelper" Version="33.0.1" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Update="xunit.runner.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
