--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
     <PropertyGroup>
-        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+        <!-- <TargetFrameworks>net9.0;net10.0</TargetFrameworks> -->
+        <TargetFrameworks>net10.0</TargetFrameworks>
         <!-- <SuppressPreviewSDKWarning>true</SuppressPreviewSDKWarning> -->
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
