test: xplat poisoned memory page tests
moved from fuzzing to test lib so tests can ensure
no out of bounds reads/writes

--- a/tools/Fuzzing/FlameCsv.Fuzzing.csproj
+++ b/tools/Fuzzing/FlameCsv.Fuzzing.csproj
@@ -17,5 +17,6 @@
             OutputItemType="Analyzer"
             PrivateAssets="all"
         />
+        <ProjectReference Include="..\..\test\Lib\FlameCsv.Tests.Lib.csproj" />
     </ItemGroup>
 </Project>
