--- a/tools/Bench/FlameCsv.Benchmark.csproj
+++ b/tools/Bench/FlameCsv.Benchmark.csproj
@@ -21,9 +21,10 @@
         <Message Text="Cleaned bin/Release directory" Importance="high" />
     </Target>
     <ItemGroup>
-        <PackageReference Include="BenchmarkDotNet" Version="0.15.6" />
-        <PackageReference Include="CsvHelper" Version="33.0.1" />
-        <PackageReference Include="Sep" Version="0.12.0" />
+        <PackageReference Include="BenchmarkDotNet" Version="0.15.8" />
+        <PackageReference Include="CsvHelper" Version="33.1.0" />
+        <PackageReference Include="RecordParser" Version="2.3.0" />
+        <PackageReference Include="Sep" Version="0.12.1" />
         <PackageReference Include="Sylvan.Data" Version="0.2.16" />
         <PackageReference Include="Sylvan.Data.Csv" Version="1.4.3" />
     </ItemGroup>
