--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -14,6 +14,20 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    <ItemGroup Condition="'$(MSBuildProjectName)' != 'FlameCsv.Tests.Lib'">
+        <None
+            Include="$(MSBuildThisFileDirectory)xunit.runner.ci.json"
+            CopyToOutputDirectory="PreserveNewest"
+            Link="xunit.runner.json"
+            Condition="'$(StopTestsOnFail)'=='false'"
+        />
+        <None
+            Include="$(MSBuildThisFileDirectory)xunit.runner.json"
+            CopyToOutputDirectory="PreserveNewest"
+            Link="xunit.runner.json"
+            Condition="'$(StopTestsOnFail)'!='false'"
+        />
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     </ItemGroup>
