--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       COMPlus_legacyCorruptedStateExceptionsPolicy: 1
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-latest] # windows-latest if needed
     runs-on: ${{ matrix.os }}
