fix: buffer overrun in parallel on avx2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
   build-and-test:
     env:
       COMPlus_legacyCorruptedStateExceptionsPolicy: 1
+      DOTNET_EnableAVX512: 0
+      DOTNET_EnableAVX512F: 0
     strategy:
       fail-fast: false
       matrix:
