--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,6 @@
 <Project>
     <PropertyGroup>
-        <!-- <TargetFrameworks>net9.0;net10.0</TargetFrameworks> -->
-        <TargetFrameworks>net10.0</TargetFrameworks>
-        <!-- <SuppressPreviewSDKWarning>true</SuppressPreviewSDKWarning> -->
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
