test: all tokenizers pt2

--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -7,6 +7,7 @@
         <RunSettingsFilePath>$(MSBuildThisFileDirectory).runsettings</RunSettingsFilePath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <NoWarn>$(NoWarn);CA2263;CS1591;CA1861;CA1816;CA1067;IDE0018</NoWarn>
+        <!-- <DefineConstants>$(DefineConstants);FULL_TEST_SUITE</DefineConstants> -->
     </PropertyGroup>
     <PropertyGroup Condition="'$(MSBuildProjectName)' != 'FlameCsv.Tests.Lib'">
         <OutputType>Exe</OutputType>
